Changes in javaGeom library

javaGeom-0.??.?   (2011.12.??, rev. ???)
=====

Nex features
- added Point2D.plus(Vector2D) and Point2D.minus(Vector2D)
- added methods for inserting vertices into simple polygons
- added method SimplePolygon2D.getRing()

Bug fixes
- fixed bug for clipping of clockwise polygons
- fixed bug for circle inversion of lines and rays

Regressions
- removed dependency to java.awt.Point, making the library less dependent from awt


javaGeom-0.9.2 (2011.10.16, rev. 286)
=====

Simply add the gpcj library to the jar and to the source.


javaGeom-0.9.1 (2011.10.06, rev. 285)
=====

New features
- added support for centroid and area computation of any polygon
- added creation of rectangle polygons in Polygon2DUtils.
- added computation of polygon difference
- refactoring of buffer computation, created interfaces for cap and join
	creation of curve buffers
- added method Curve2D.getVertices()

Bug fixes
- fixed bug in Angle2D.getHorizontalAngle(doubles...)
- fixed buffer of generic circulinear domains
- fix buffer of polylines with multiple vertices
- fix bug for buffer of infinite curves (lines or rays)

Regressions
- deprecated Boundary2D.getBoundaryCurves(), replaced by getContinuousCurves()
- removed ContinuousCirculinearCurve2D
- renamed CirculinearBoundarySet2D to CirculinearContourArray2D
- splitted CirculinearCurveSet2D into interface and array implementation
- put buffer computation classes in separate directory


javaGeom-0.9.0 (2010.11.06, rev. 264)
====

main changes are removal of obsolete classes and methods, and a slight
re-organisation of class hierarchy (mainly shape sets)

New features
- removed deprecated classes and methods
- added ShapeSet2D, ShapeArray2D, DomainSet2D and DomainArray2D
- added the GPCJ library, that can handle boolean operation on polygons
	(union, intersection, difference, exclusive difference)
	
Bug fixes
- fixed bugs in buffer computation
- fixed bug in drawing polylines